// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sanitiser sanitise global configuration sanitise if no config provided, dev env 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 10000,
  "skipAvailabilityZoneCheck": false,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;

exports[`sanitiser sanitise global configuration sanitise to default retry delay if delay is smaller then default 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 10000,
  "skipAvailabilityZoneCheck": false,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;

exports[`sanitiser sanitise global configuration sanitise to new retry delay if delay is bigger then default 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 20000,
  "skipAvailabilityZoneCheck": false,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;

exports[`sanitiser sanitise global configuration sanitise with overridden skipAvailabilityZoneCheck 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 10000,
  "skipAvailabilityZoneCheck": true,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;

exports[`sanitiser sanitise global configuration sanitises the l1CacheSettings - uses the provided config when valid (minLatencyToStore=0) 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 10000,
  "skipAvailabilityZoneCheck": false,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;

exports[`sanitiser sanitise global configuration sanitises the l1CacheSettings - uses the provided config when valid 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 10000,
  "skipAvailabilityZoneCheck": false,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;

exports[`sanitiser sanitise global configuration sanitises the l1CacheSettings using the default values, when it's empty 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 10000,
  "skipAvailabilityZoneCheck": false,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;

exports[`sanitiser sanitise global configuration sanitises the l1CacheSettings using the default values, when it's invalid 1`] = `
Object {
  "cacheDuration": 60,
  "l1CacheSettings": Object {
    "minLatencyToStore": 50,
    "size": 1000,
    "ttl": 60000,
  },
  "master": Object {
    "az": "eu-west-2b",
    "host": "biomage-cache-001.lmoszc.0001.euw2.cache.amazonaws.com",
    "port": "6379",
  },
  "redisGetTimeout": 3000,
  "retryDelay": 10000,
  "skipAvailabilityZoneCheck": false,
  "slaves": Array [
    Object {
      "az": "eu-west-2b",
      "host": "biomage-cache-002.lmoszc.0001.euw2.cache.amazonaws.com",
      "port": "6379",
    },
  ],
}
`;
